completed all challenges

--- a/templates/calculator_results.html
+++ b/templates/calculator_results.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
-        <h3>You chose to {{operation}} {{input_number_1}} and {{input_number_2}}. Your result is: {{result}}</h3>
+        <h3>You chose to {{operation}} {{operand1}} and {{operand2}}. Your result is: {{result}}</h3>
     </body>
 </html>
